Added more jokes

--- a/index.html
+++ b/index.html
@@ -51,5 +51,13 @@
     <hr>
     <h3>wich owl steels from the rich and gives to the poor?</h3>
     <p>robin hoot!</p>
+
+    <hr>
+    <h3>why coudn't the skeleton go to the dance?</h3>
+    <p>because he had no BODY to go with!</p>
+
+    <hr>
+    <h3>what starts with a P and ends with an E and has a thousand letters in it?</h3>
+    <p>post ofice!</p>
   </body>
 </html>
